--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+serde = { version = "1.0.214", features = ["derive"] }
+serde_bencode = "0.2.4"
+serde_bytes = "0.11.15"
