--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,6 @@ serde_bytes = "0.11.15"
 sha1 = "0.10.6"
 tokio = { version = "1.41.0", features = ["full"] }
 url = "2.5.2"
+
+[dev-dependencies]
+assert_matches = "1.5.0"
