--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+hex = "0.4.3"
 percent-encoding = "2.3.1"
 rand = "0.8.5"
 reqwest = { version = "0.12.9", features = ["json"] }
@@ -12,6 +13,8 @@ serde_bencode = "0.2.4"
 serde_bytes = "0.11.15"
 sha1 = "0.10.6"
 tokio = { version = "1.41.0", features = ["full"] }
+tracing = "0.1.41"
+tracing-subscriber = "0.3.19"
 url = "2.5.2"
 
 [dev-dependencies]
