--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ serde_bencode = "0.2.4"
 serde_bytes = "0.11.15"
 sha1 = "0.10.6"
 tokio = { version = "1.41.0", features = ["full"] }
+toml = "0.8.19"
 tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
 url = "2.5.2"
