--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,8 @@ sha1 = "0.10.6"
 tokio = { version = "1.41.0", features = ["full"] }
 toml = "0.8.19"
 tracing = "0.1.41"
-tracing-subscriber = "0.3.19"
+tracing-appender = "0.2.3"
+tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 url = "2.5.2"
 
 [dev-dependencies]
