--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,12 @@ name = "jam"
 version = "0.1.0"
 edition = "2021"
 
+[workspace]
+members = ["protocol"]
+
 [dependencies]
 hex = "0.4.3"
+protocol = { path = "protocol" }
 percent-encoding = "2.3.1"
 rand = "0.8.5"
 reqwest = { version = "0.12.9", features = ["json"] }
