--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,11 @@ tracing = "0.1.41"
 tracing-appender = "0.2.3"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 url = "2.5.2"
+uuid = { version = "1.13.1", features = [
+    "v4",
+    "fast-rng",
+    "macro-diagnostics",
+] }
 
 [dev-dependencies]
 assert_matches = "1.5.0"
