--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,8 @@ uuid = { version = "1.13.1", features = [
 ] }
 async-trait = "0.1.88"
 atty = "0.2.14"
+terminal_size = "0.4.2"
+regex = "1.11.1"
 
 [dev-dependencies]
 assert_matches = "1.5.0"
